[gd_scene load_steps=9 format=3 uid="uid://42v35pmaar3w"]

[ext_resource type="Script" path="res://traps/DragonGargoyle.gd" id="1_teck1"]
[ext_resource type="Texture2D" uid="uid://c7mom37ybdjqq" path="res://sprites/traps/DragonGargoyle/DragonGargoyle.png" id="2_bjwvy"]
[ext_resource type="AudioStream" uid="uid://d27ydwr0d08j2" path="res://audio/gargoyle_1_fireball.mp3" id="3_e0c3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acs4f"]
size = Vector2(69, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_abx6v"]
atlas = ExtResource("2_bjwvy")
region = Rect2(232, 0, 116, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wi80"]
atlas = ExtResource("2_bjwvy")
region = Rect2(116, 0, 116, 115)

[sub_resource type="SpriteFrames" id="SpriteFrames_eayo0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abx6v")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wi80")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5iku"]
size = Vector2(320, 61)

[node name="DragonGargoyle" type="CharacterBody2D" groups=["Mob"]]
z_index = -1
script = ExtResource("1_teck1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, 17.25)
shape = SubResource("RectangleShape2D_acs4f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_eayo0")
animation = &"attack"

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2(-6, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-210, -13.5)
shape = SubResource("RectangleShape2D_g5iku")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e0c3e")
volume_db = -7.0
pitch_scale = 0.96
attenuation = 9.0

[connection signal="area_entered" from="PlayerDetection" to="." method="_on_player_detection_entered"]
[connection signal="area_exited" from="PlayerDetection" to="." method="_on_player_detection_exited"]
